Add 720p MP4, remove large MOV

--- a/index.qmd
+++ b/index.qmd
@@ -29,7 +29,7 @@ page-layout: article
 
 ### Scoring Model / AHP Model Project - Junior Year
 
-- [Tatlonghari Owen MOV](Tatlonghari%20Owen%20PPT.mov)
+- [Tatlonghari Owen Video (720p MP4)](Tatlonghari%20Owen%20PPT%20720p.mp4)
 
 ## Contact
 
