--- a/index.qmd
+++ b/index.qmd
@@ -15,21 +15,51 @@ page-layout: article
 #### Essays - Freshman Year
 
 - [Generational Influence of Technology Research Essay.docx](assets/docs/Generational%20Influence%20of%20Technology%20Research%20Essay.docx)
+
+<iframe
+  src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2Fdocs%2FGenerational%2520Influence%2520of%2520Technology%2520Research%2520Essay.docx"
+  width="100%" height="600" frameborder="0"></iframe>
+
 - [English Research Project.docx](assets/docs/English%20Research%20Project.docx)
+
+<iframe
+  src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2Fdocs%2FEnglish%2520Research%2520Project.docx"
+  width="100%" height="600" frameborder="0"></iframe>
 
 ### Case 1 — Liz Motors - Junior Year
 
 - Excel: [Case 1 - Liz Motors.xlsx](assets/Case%201%20-%20Liz%20Motors%20copy.xlsx)
+
+<iframe
+  src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%25201%2520-%2520Liz%2520Motors%2520copy.xlsx"
+  width="100%" height="600" frameborder="0"></iframe>
+
 - Word: [Case 1 Liz Motors.docx](assets/Case%201%20Liz%20Motors%20copy.docx)
+
+<iframe
+  src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%25201%2520Liz%2520Motors%2520copy.docx"
+  width="100%" height="600" frameborder="0"></iframe>
 
 ### Case II — M&M Pizza - Junior Year
 
 - Excel: [Case II M&M Pizza.xlsx](assets/Case%20II%20M%26M%20Pizza.xlsx)
+
+<iframe
+  src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%2520II%2520M%2526M%2520Pizza.xlsx"
+  width="100%" height="600" frameborder="0"></iframe>
+
 - PDF: [M&M Pizza copy.pdf](assets/M%26M%20Pizza%20copy.pdf)
+
+<iframe src="assets/M%26M%20Pizza%20copy.pdf" width="100%" height="600" frameborder="0"></iframe>
 
 ### Scoring Model / AHP Model Project - Junior Year
 
 - [Tatlonghari Owen Video (720p MP4)](Tatlonghari%20Owen%20PPT%20720p.mp4)
+
+<video width="100%" height="auto" controls>
+  <source src="Tatlonghari%20Owen%20PPT%20720p.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 ## Contact
 
