--- a/index.qmd
+++ b/index.qmd
@@ -30,17 +30,15 @@ page-layout: article
       <li><a href="assets/docs/Generational%20Influence%20of%20Technology%20Research%20Essay.docx" target="_blank">Generational Influence of Technology Research Essay.docx</a></li>
     </ul>
     <div class="doc-embed">
-      <iframe
-        src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2Fdocs%2FGenerational%2520Influence%2520of%2520Technology%2520Research%2520Essay.docx"
-        width="100%" height="600" frameborder="0"></iframe>
+      <p><strong>Document Preview:</strong> Click the link above to download and view the essay.</p>
+      <p><em>Note: For best viewing experience, download the document to open in Microsoft Word or Google Docs.</em></p>
     </div>
     <ul>
       <li><a href="assets/docs/English%20Research%20Project.docx" target="_blank">English Research Project.docx</a></li>
     </ul>
     <div class="doc-embed">
-      <iframe
-        src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2Fdocs%2FEnglish%2520Research%2520Project.docx"
-        width="100%" height="600" frameborder="0"></iframe>
+      <p><strong>Document Preview:</strong> Click the link above to download and view the essay.</p>
+      <p><em>Note: For best viewing experience, download the document to open in Microsoft Word or Google Docs.</em></p>
     </div>
   </div>
 </div>
@@ -53,17 +51,15 @@ page-layout: article
       <li>Excel: <a href="assets/Case%201%20-%20Liz%20Motors%20copy.xlsx" target="_blank">Case 1 - Liz Motors.xlsx</a></li>
     </ul>
     <div class="doc-embed">
-      <iframe
-        src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%25201%2520-%2520Liz%2520Motors%2520copy.xlsx"
-        width="100%" height="600" frameborder="0"></iframe>
+      <p><strong>Excel File:</strong> Click the link above to download and view the spreadsheet.</p>
+      <p><em>Note: For best viewing experience, download the file to open in Microsoft Excel or Google Sheets.</em></p>
     </div>
     <ul>
       <li>Word: <a href="assets/Case%201%20Liz%20Motors%20copy.docx" target="_blank">Case 1 Liz Motors.docx</a></li>
     </ul>
     <div class="doc-embed">
-      <iframe
-        src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%25201%2520Liz%2520Motors%2520copy.docx"
-        width="100%" height="600" frameborder="0"></iframe>
+      <p><strong>Word Document:</strong> Click the link above to download and view the document.</p>
+      <p><em>Note: For best viewing experience, download the file to open in Microsoft Word or Google Docs.</em></p>
     </div>
   </div>
 </div>
@@ -76,9 +72,8 @@ page-layout: article
       <li>Excel: <a href="assets/Case%20II%20M%26M%20Pizza.xlsx" target="_blank">Case II M&M Pizza.xlsx</a></li>
     </ul>
     <div class="doc-embed">
-      <iframe
-        src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fowentat7.github.io%2FCollege-Projects-Portfolio%2Fassets%2FCase%2520II%2520M%2526M%2520Pizza.xlsx"
-        width="100%" height="600" frameborder="0"></iframe>
+      <p><strong>Excel File:</strong> Click the link above to download and view the spreadsheet.</p>
+      <p><em>Note: For best viewing experience, download the file to open in Microsoft Excel or Google Sheets.</em></p>
     </div>
     <ul>
       <li>PDF: <a href="assets/M%26M%20Pizza%20copy.pdf" target="_blank">M&M Pizza copy.pdf</a></li>
